--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,19 @@ ul{
 }
 /* PC */
 @media screen and (min-width:1200px) {
-    .togglemenu{
-    display: none;
+   
+    .togglebtn{
+    width: 100%;
+    background-color: rgb(53, 53, 53);
+    color: rgb(255, 255, 255);
+    height: 40px;
+    border: none;
+  
     }
     .menu {
         width: 100%;
         display: grid;
-        grid-template-columns: 79% 19%;
+        grid-template-columns: 98% 2%;
         justify-content: space-between;
         background: rgb(53, 53, 53);
         color: rgb(255, 255, 255);
@@ -44,9 +50,9 @@ ul{
     }
     
     .menu_ul {
-        width: 60%;
+        width: 100%;
         display: grid;
-        grid-template-columns: 21% 15% 24% 20% 23%;
+        grid-template-columns: 10% 10% 10% 10% 10% 27% 22%;
         list-style: none;
     
     
@@ -108,14 +114,14 @@ ul{
     
     
     .searchbox {
-        padding-top: 5px;
+       
         display: grid;
         grid-template-columns: 70% 30%;
     }
     
     .searchbox>input {
-        height: 33px;
-        line-height: 40px;
+        height: 32px;
+        line-height: 38px;
         font-size: 20px;
         border: 0px;
         margin-right: 3px;
@@ -128,10 +134,11 @@ ul{
     }
     
     .searchbox>button {
-        height: 40px;
+        height: 37px;
         border: 1px solid rgb(255, 201, 222);
         color: rgb(255, 90, 186);
         border-radius: 16px;
+        margin-top: 2px;
     }
     
     .searchbox>button:hover {
@@ -325,7 +332,6 @@ ul{
         font-size: 59px;
         margin-top: 95px;
     }
-    
 }
 /* IP */
 @media screen and (max-width:500px){
@@ -765,8 +771,234 @@ ul{
     grid-template-columns: 70% 30%;
 }
 }
-/* IPAD AIR chieu ngang */
+/* IPAD AIR chiều ngang */
+@media only screen
+and (min-device-width: 768px)
+and (max-device-width: 1024px)
+and (-webkit-min-device-pixel-ratio: 1) {
+ 
 
+     .container{
+    width: 100%;
+    }
+    .togglemenu{ 
+    display: block;
+ 
+
+    }
+    .togglebtn{
+    width: 100%;
+    }
+
+.menu{
+    width: 98%;
+    display: grid;
+    grid-template-columns: 93% 5%;
+    background-color: black;
+    height: 40px;
+    overflow: hidden; 
+}
+.togglebtn:hover .menu>.col{
+    height: 400px;
+}
+.menu>.col.menu_ul{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 15%;
+    color: white;
+}
+.menu_ul{
+    display: grid;
+    grid-template-columns:100%;
+
+}
+.menu_ul>li{
+    padding-left: 40px;
+}
+.menu_ul li{
+
+}
+.menu_ul a{
+    color: white;
+    line-height: 40px;
+    font-size: 27px;
+}
+.productLi{
+    position: relative;
+}
+.submenu{
+    position: absolute;
+    width: 120px;
+    display: none;
+    
+}
+.productLi:hover .submenu{
+    display: block;
+}
+
+.submenu>li{
+    background-color: rgb(117, 117, 117);
+    padding-left: 12px;
+}
+.menu_ul li.togglemenu{
+    background-color: white;
+    color: black;
+    position: relative;
+}
+.togglebtn{
+
+    outline: none;
+    height: 43px;
+    font-size: 31px;
+    border: none;
+    cursor: pointer;
+    color: white;
+    background-color:black;
+
+}
+.searchbox{
+width: 50%;
+margin: 10px auto;
+display: grid;
+grid-template-columns: 70% 30% ;
+margin-left: 198px;
+height: 33px;
+}
+.main{
+width: 98%;
+display: grid;
+grid-template-columns: 100%;
+}
+.sliderbar>ul{
+width: 95%;
+margin: 10px auto;
+display: grid;
+grid-template-columns: 49% 49%;
+justify-content: space-around;
+}
+
+.sliderbar ul li{
+line-height: 40px;
+text-align: center;
+
+border-radius: 12px;
+border:1px solid rgb(94, 94, 94)
+}
+.sliderbar a{
+color: rgb(24, 24, 24);
+font-weight: bold;
+}
+.sliderbar li:hover{
+background-color: rgb(182, 182, 182);
+}
+
+/* ..sliderbar a{
+color: white;
+font-weight: bold;
+}
+.sliderbar {
+border-right: 1px solid black;
+font-size: 19px;
+text-align: center;
+}
+
+.sliderbar>ul {
+display: grid;
+grid-template-columns: 100%;
+}
+
+.sliderbar li {
+line-height: 40px;
+
+margin-bottom: 10px;
+}
+
+.sliderbar li:hover {
+background-color: rgb(255, 172, 193);
+margin-right: 4px;
+margin-left: 2px;
+
+}
+
+.sliderbar li:hover a {
+color: rgb(0, 0, 0);
+font-size: 18px;
+} */
+.main_1{
+width: 100%;
+margin: 0px auto;
+}
+.productitem{
+
+margin-bottom: 7px;
+border-radius: 7px;
+}
+.productitem:hover{
+box-shadow: 2px 2px 2px 2px gray;
+transition: ease-in-out .5s;
+}
+
+.main_1 .row{
+display: grid;
+width: 95%;
+margin: 10px auto;
+grid-template-columns: 49% 49%;
+justify-content: space-around;
+/* margin-left: 15px; */
+}
+.main_1 .row img{
+height: 260px;
+margin: 0px auto;
+margin-left: 44px;
+width: auto;
+}
+.productitem .row:nth-child(2){
+display: grid;
+grid-template-columns: 100%;
+
+}
+.productitem .row:nth-child(2) h5{
+text-align: center;
+font-size: 23px;
+margin-left: 28px;
+}
+
+.productitem .row:last-child button{
+height: 40px; 
+border:1px solid rgb(94, 94, 94);
+background-color: white;
+border-radius: 13px;
+font-size: 17px;
+}
+.productitem .row:last-child button:hover{
+background-color: rgb(126, 126, 126);
+font-weight: bold;
+color: white;
+}
+.footer{
+width: 100%;
+background-color: black;
+color: white;
+
+height: 200px;
+}
+.footer .row >.col:first-child{
+padding: 13% 27%;
+font-size: 36px;
+margin-left: 20px;
+}
+.footer iframe{
+height: 200px;
+width: 100%;
+} 
+.footer .row{
+width: 100%;
+display: grid;
+grid-template-columns: 70% 30%;
+}
+}
+ 
+   
+    
 /* IPAD AIR */
 @media screen and (min-width:820px) and (max-width: 1180px){
     .container{
